fix: fix element overflow

--- a/src/app.css
+++ b/src/app.css
@@ -123,7 +123,7 @@
 
     .section-header::before {
         content: "";
-        @apply absolute left-0 -bottom-1/3 bg-primary h-[.1rem];
+        @apply absolute hidden sm:block left-0 -bottom-1/3 bg-primary h-[.1rem];
         width: var(--line-width, 0px);
     }
 
@@ -145,7 +145,7 @@
 	}
 
     .section-description {
-        @apply col-span-9 col-start-2 text-lg font-sans font-medium;
+        @apply col-span-9 col-start-2 text-lg font-sans font-medium text-primary-dark;
     }
 
 	.card-wrapper {
